python-defaults (2.7.5-3) UNRELEASED; urgency=low

  * Fix libpython-all-dbg doc dir symlink. Closes: #712270.

 -- Matthias Klose <doko@debian.org>  Mon, 17 Jun 2013 11:09:36 +0200

python-defaults (2.7.5-2) unstable; urgency=low

  * Add dependencies on the new libpython-{stdlib,all-dev,all-dbg} packages.

 -- Matthias Klose <doko@debian.org>  Thu, 13 Jun 2013 15:07:18 +0200

python-defaults (2.7.5-1) unstable; urgency=low

  [ Matthias Klose ]
  * Bump version to 2.7.5.
  * Drop python2.6 as a supported python version.
  * Bump standards version to 3.9.4.
  * Start building the libpython-stdlib, libpython-all-dev, libpython-all-dbg
    packages.
  * Drop Python 2.6 as a supported Python version.
  * Fix some lintian warnings.

  [ Scott Kitterman ]
  * When X(S)-Python-Version or debian/pyversions is not present, do not
    describe them as missing, just indicate they are not there

 -- Matthias Klose <doko@debian.org>  Thu, 06 Jun 2013 14:57:03 +0200

python-defaults (2.7.3-13) experimental; urgency=low

  * Always build the policy files.

 -- Matthias Klose <doko@debian.org>  Thu, 28 Feb 2013 16:46:08 +0100

python-defaults (2.7.3-12) experimental; urgency=low

  * Move python-docutils to build-depends (from build-depends-indep).

 -- Matthias Klose <doko@debian.org>  Thu, 28 Feb 2013 15:58:09 +0100

python-defaults (2.7.3-11) experimental; urgency=low

  * Add Multi-Arch: same packages libpython-all-{dev,dbg} (not yet built,
    python2.6 doesn't have support for multiarch).
  * python-dbg: Stop providing python-gdbm-dbg, python-tk-dbg. Closes: #700716.
  * Add a libpython-stdlib package (not yet built).

 -- Matthias Klose <doko@debian.org>  Thu, 28 Feb 2013 14:43:06 +0100

python-defaults (2.7.3-10) experimental; urgency=low

  * Build dependency packages as architecture dependent packages.
  * Make python, python-{minimal,dev,dbg} Multi-Arch: allowed.
  * Build Multi-Arch: any packages libpython-{dev,dbg} packages providing